unpackaged/main/default/objects/WorkType/fields/Access_Equipment_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Access_Equipment_Limitations__c</fullName>
    <label>Access Equipment / Limitations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>