unpackaged/main/default/objects/WorkType/fields/Admin_Picklist_Check__c.field-meta.xml
<CustomField>
    <fullName>Admin_Picklist_Check__c</fullName>
    <formula>IF (TEXT(Sub_Category_Trade_Group__c)= Name  , TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Picklist Check</label>
    <type>Checkbox</type>
</CustomField>