unpackaged/main/default/objects/WorkType/fields/Associated_Search_Terms2__c.field-meta.xml
<CustomField>
    <fullName>Associated_Search_Terms2__c</fullName>
    <externalId>true</externalId>
    <label>Associated Search Terms2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>