unpackaged/main/default/objects/WorkType/fields/Associated_Search_Terms__c.field-meta.xml
<CustomField>
    <fullName>Associated_Search_Terms__c</fullName>
    <label>Associated Search Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>