unpackaged/main/default/objects/WorkType/fields/Confirming_Task__c.field-meta.xml
<CustomField>
    <fullName>Confirming_Task__c</fullName>
    <label>Confirming Task / FAQ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>