unpackaged/main/default/objects/WorkType/fields/Doc_Cert_Provided__c.field-meta.xml
<CustomField>
    <fullName>Doc_Cert_Provided__c</fullName>
    <label>Doc/Cert Provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>Alex to Provide values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>