unpackaged/main/default/objects/WorkType/fields/EstimatedDuration_Hours__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDuration_Hours__c</fullName>
    <formula>CASE( DurationType,
&#39;Hours&#39;,EstimatedDuration,
&#39;Minutes&#39;, EstimatedDuration/60,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EstimatedDuration Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>