unpackaged/main/default/objects/WorkType/fields/Expectations__c.field-meta.xml
<CustomField>
    <fullName>Expectations__c</fullName>
    <label>Expectations</label>
    <type>TextArea</type>
</CustomField>