unpackaged/main/default/objects/WorkType/fields/FLS_ID__c.field-meta.xml
<CustomField>
    <fullName>FLS_ID__c</fullName>
    <description>FLS ID to be used when using get appoint from FLS. Decision was made not to use skill but instead to use an externally defined ID. This allows for the flexibility of changing the name/description of the work type without affecting the integration</description>
    <externalId>true</externalId>
    <label>FLS ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>