unpackaged/main/default/objects/WorkType/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The GL Code associated with the product</description>
    <label>GL Code</label>
    <referenceTo>General_Ledger_Code__c</referenceTo>
    <relationshipLabel>Work Types</relationshipLabel>
    <relationshipName>Work_Types</relationshipName>
    <type>Lookup</type>
</CustomField>