unpackaged/main/default/objects/WorkType/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Trade__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>GroupNew</valueSetName>
    </valueSet>
</CustomField>