unpackaged/main/default/objects/WorkType/fields/Group_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Group_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Work Types</relationshipLabel>
    <relationshipName>Work_Types</relationshipName>
    <type>Lookup</type>
</CustomField>