unpackaged/main/default/objects/WorkType/fields/Info_Required__c.field-meta.xml
<CustomField>
    <fullName>Info_Required__c</fullName>
    <label>Info Required</label>
    <type>TextArea</type>
</CustomField>