unpackaged/main/default/objects/WorkType/fields/Ledger__c.field-meta.xml
<CustomField>
    <fullName>Ledger__c</fullName>
    <description>The path of the GL tree to follow</description>
    <label>Ledger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ledger_Type</valueSetName>
    </valueSet>
</CustomField>