unpackaged/main/default/objects/WorkType/fields/Provide_Plan_Photos__c.field-meta.xml
<CustomField>
    <fullName>Provide_Plan_Photos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provide Plan/Photos</label>
    <type>Checkbox</type>
</CustomField>