unpackaged/main/default/objects/WorkType/fields/Qualified_Inactive_Resource_Count__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Inactive_Resource_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qualified Inactive Resource Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>