unpackaged/main/default/objects/WorkType/fields/Qualified_Resource_Count__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Resource_Count__c</fullName>
    <label>Qualified Resource Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>