unpackaged/main/default/objects/WorkType/fields/Quote_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Quote_Disclaimer__c</fullName>
    <label>Quote Disclaimer</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>