unpackaged/main/default/objects/WorkType/fields/Reactive_or_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Reactive_or_Estimate__c</fullName>
    <label>Reactive or Estimate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>