unpackaged/main/default/objects/WorkType/fields/Recommended_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Job_Type__c</fullName>
    <label>Recommended Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOC Estimate</fullName>
            </value>
            <value>
                <fullName>Chargeable Estimate</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
            <value>
                <fullName>Manager Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>