unpackaged/main/default/objects/WorkType/fields/Require_Electrical_Certification__c.field-meta.xml
<CustomField>
    <fullName>Require_Electrical_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Work Type requires an Electrical Certification to be completed. This will show on the Work Order</description>
    <label>Require Electrical Certification</label>
    <type>Checkbox</type>
</CustomField>