unpackaged/main/default/objects/WorkType/fields/Required_Resource_Count__c.field-meta.xml
<CustomField>
    <fullName>Required_Resource_Count__c</fullName>
    <label>Required Resource Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>