unpackaged/main/default/objects/WorkType/fields/Sub_Category_Trade_Group__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category_Trade_Group__c</fullName>
    <description>Sub Cats of Trade and Group picklist fields</description>
    <inlineHelpText>Sub Cats of Trade and Group picklist fields</inlineHelpText>
    <label>Sub-Category (Trade &amp;amp; Group)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Trade_And_Group_Sub_Category</valueSetName>
    </valueSet>
</CustomField>