unpackaged/main/default/objects/WorkType/fields/Task_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Task_Expectations__c</fullName>
    <label>Task Expectations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>