unpackaged/main/default/objects/WorkType/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <label>Trade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trade</valueSetName>
    </valueSet>
</CustomField>