unpackaged/main/default/objects/WorkType/fields/Trades__c.field-meta.xml
<CustomField>
    <fullName>Trades__c</fullName>
    <description>local picklist only used in Phase 1 - this is being replaced by a global picklist as part of PHASE 2 deployment - remove field once Phase 1 finished and Phase 2 live.</description>
    <inlineHelpText>local picklist only used in Phase 1 - this is being replaced by a global picklist as part of PHASE 2 deployment - remove field once Phase 1 finished and Phase 2 live.</inlineHelpText>
    <label>Trade P1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Commercial Gas</fullName>
            </value>
            <value>
                <fullName>Domestic Gas</fullName>
            </value>
            <value>
                <fullName>Drainage</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
            <value>
                <fullName>Gardening</fullName>
            </value>
            <value>
                <fullName>General Building &amp; Multi Trade</fullName>
            </value>
            <value>
                <fullName>Handyman</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Refurbishment</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Scaffolding</fullName>
            </value>
            <value>
                <fullName>Ventilation</fullName>
            </value>
            <value>
                <fullName>Waste Removal</fullName>
            </value>
            <value>
                <fullName>OSA</fullName>
            </value>
            <value>
                <fullName>Glazing, UPVC &amp; Aluminium</fullName>
            </value>
            <value>
                <fullName>Refrigeration</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Basic Drainage</fullName>
            </value>
            <value>
                <fullName>Bathroom Installation</fullName>
                <isActive>false</isActive>
                <label>Bathroom Installation</label>
            </value>
            <value>
                <fullName>Cleaning</fullName>
                <isActive>false</isActive>
                <label>Cleaning</label>
            </value>
            <value>
                <fullName>Decorating</fullName>
                <isActive>false</isActive>
                <label>Decorating</label>
            </value>
            <value>
                <fullName>Flooring</fullName>
                <isActive>false</isActive>
                <label>Flooring</label>
            </value>
            <value>
                <fullName>Franchise Works</fullName>
                <isActive>false</isActive>
                <label>Franchise Works</label>
            </value>
            <value>
                <fullName>Garden and Landscaping</fullName>
                <isActive>false</isActive>
                <label>Garden and Landscaping</label>
            </value>
            <value>
                <fullName>General</fullName>
                <isActive>false</isActive>
                <label>General</label>
            </value>
            <value>
                <fullName>HVAC</fullName>
                <isActive>false</isActive>
                <label>HVAC</label>
            </value>
            <value>
                <fullName>Kitchen Installation</fullName>
                <isActive>false</isActive>
                <label>Kitchen Installation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>