unpackaged/main/default/objects/WorkType/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Work Type Verified by User</inlineHelpText>
    <label>WT Verified by User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Types</relationshipName>
    <type>Lookup</type>
</CustomField>