unpackaged/main/default/objects/WorkType/fields/WT_Reference__c.field-meta.xml
<CustomField>
    <fullName>WT_Reference__c</fullName>
    <label>WT Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>