unpackaged/main/default/objects/WorkType/fields/WT_Verified_by_User_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>WT_Verified_by_User_Date_Time__c</fullName>
    <inlineHelpText>Work Type Verified by User Date &amp; Time</inlineHelpText>
    <label>WT Verified by User Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>