unpackaged/main/default/objects/WorkType/recordTypes/Dont_Use_Work_Type.recordType-meta.xml
<RecordType>
    <fullName>Dont_Use_Work_Type</fullName>
    <active>true</active>
    <label>*Dont USE*Work Type`</label>
</RecordType>