unpackaged/main/default/objects/WorkType/recordTypes/Fixed_Price.recordType-meta.xml
<RecordType>
    <fullName>Fixed_Price</fullName>
    <active>true</active>
    <label>Fixed Price</label>
</RecordType>