unpackaged/main/default/objects/WorkType/recordTypes/Online_Booking.recordType-meta.xml
<RecordType>
    <fullName>Online_Booking</fullName>
    <active>true</active>
    <label>Online Booking</label>
</RecordType>