unpackaged/main/default/objects/WorkType/recordTypes/OSA.recordType-meta.xml
<RecordType>
    <fullName>OSA</fullName>
    <active>true</active>
    <label>OSA</label>
</RecordType>