unpackaged/main/default/objects/WorkType/recordTypes/Reactive.recordType-meta.xml
<RecordType>
    <fullName>Reactive</fullName>
    <active>true</active>
    <label>Reactive</label>
</RecordType>