unpackaged/main/default/objects/WorkType/recordTypes/Work_Type.recordType-meta.xml
<RecordType>
    <fullName>Work_Type</fullName>
    <active>false</active>
    <label>Work Type</label>
</RecordType>