unpackaged/main/default/objects/WorkType/validationRules/Only_Admin_Can_Change_Certain_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admin_Can_Change_Certain_Fields</fullName>
    <active>true</active>
    <description>Only Administrators can change these fields: Duration Type, Work Type Name, Description, Estimated Duration Hours, Record Type, Auto-Create Service Appointment</description>
    <errorConditionFormula>AND
(
$User.ProfileId&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.System_Administrator.X15_Char_Profile_ID__c,
$User.Id &lt;&gt;&#39;0053L0000016uqW&#39;,/*Asuka Sheridan*/
$User.Id &lt;&gt;&#39;0050N000008MCTv&#39;,/*Alex Bacon*/
OR
(
ISCHANGED(DurationType),
ISCHANGED(Name),
ISCHANGED(Description),
ISCHANGED(EstimatedDuration),
ISCHANGED(ShouldAutoCreateSvcAppt),
ISCHANGED(RecordTypeId)
)

)</errorConditionFormula>
    <errorMessage>Only Administrators can change these fields: Duration Type, Work Type Name, Description, Estimated Duration Hours, Record Type, Auto-Create Service Appointment</errorMessage>
</ValidationRule>