unpackaged/main/default/objects/WorkType/listViews/All_Roofing_Work_Types.listView-meta.xml
<ListView>
    <fullName>All_Roofing_Work_Types</fullName>
    <columns>Trade__c</columns>
    <columns>Group_Lookup__c</columns>
    <columns>Name</columns>
    <columns>Qualified_Resource_Count__c</columns>
    <columns>EstimatedDuration</columns>
    <columns>Reactive_or_Estimate__c</columns>
    <columns>ShouldAutoCreateSvcAppt</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trade__c</field>
        <operation>equals</operation>
        <value>Roofing</value>
    </filters>
    <label>Roofing - Work Types</label>
</ListView>