unpackaged/main/default/objects/WorkType/listViews/All_Work_Types_Alex.listView-meta.xml
<ListView>
    <fullName>All_Work_Types_Alex</fullName>
    <columns>Name</columns>
    <columns>Group_Lookup__c</columns>
    <columns>Trade__c</columns>
    <columns>GL_Code__c</columns>
    <columns>Sub_Category_Trade_Group__c</columns>
    <columns>Qualified_Resource_Count__c</columns>
    <columns>EstimatedDuration</columns>
    <columns>Reactive_or_Estimate__c</columns>
    <columns>Confirming_Task__c</columns>
    <columns>Associated_Search_Terms__c</columns>
    <columns>Associated_Search_Terms2__c</columns>
    <columns>Task_Expectations__c</columns>
    <columns>Scope_of_Works__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Types</label>
</ListView>