unpackaged/main/default/objects/WorkType/listViews/Commercial_Gas_Scope_of_works.listView-meta.xml
<ListView>
    <fullName>Commercial_Gas_Scope_of_works</fullName>
    <columns>Name</columns>
    <columns>EstimatedDuration</columns>
    <columns>DurationType</columns>
    <columns>Qualified_Resource_Count__c</columns>
    <columns>Scope_of_Works__c</columns>
    <columns>Scope_of_Works_2__c</columns>
    <columns>Scope_of_Works_3__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trade__c</field>
        <operation>contains</operation>
        <value>Heating &amp; Hot Water (Commercial),Utilities - Blended - Heating &amp; Hot Water (Commercial),Utilities - Blended - Heating &amp; Hot Water (Domestic)</value>
    </filters>
    <label>Commercial  Gas Scope of works</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>