unpackaged/main/default/objects/WorkType/listViews/Rate_Cards.listView-meta.xml
<ListView>
    <fullName>Rate_Cards</fullName>
    <columns>Name</columns>
    <columns>DurationType</columns>
    <columns>EstimatedDuration</columns>
    <columns>DurationInMinutes</columns>
    <columns>ShouldAutoCreateSvcAppt</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ShouldAutoCreateSvcAppt</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Reactive</value>
    </filters>
    <label>Subcategory - Reactive</label>
</ListView>