unpackaged/main/default/objects/WorkType/listViews/Work_Type_Items.listView-meta.xml
<ListView>
    <fullName>Work_Type_Items</fullName>
    <columns>Name</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>EstimatedDuration</columns>
    <columns>DurationType</columns>
    <columns>ShouldAutoCreateSvcAppt</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ShouldAutoCreateSvcAppt</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Reactive</value>
    </filters>
    <label>Sub-tasks - Reactive</label>
</ListView>