unpackaged/main/default/objects/WorkType/listViews/Work_Type_W_O_Fixed_Prices.listView-meta.xml
<ListView>
    <fullName>Work_Type_W_O_Fixed_Prices</fullName>
    <columns>Name</columns>
    <columns>Group__c</columns>
    <columns>EstimatedDuration</columns>
    <columns>DurationType</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>ShouldAutoCreateSvcAppt</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ShouldAutoCreateSvcAppt</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Fixed_Price</value>
    </filters>
    <label>Subcategory - Fixed Prices</label>
</ListView>