unpackaged/main/default/objects/WorkType/listViews/Work_Types_Ex_OSA_OB.listView-meta.xml
<ListView>
    <fullName>Work_Types_Ex_OSA_OB</fullName>
    <columns>Trade__c</columns>
    <columns>Group_Lookup__c</columns>
    <columns>Name</columns>
    <columns>Qualified_Resource_Count__c</columns>
    <columns>EstimatedDuration</columns>
    <columns>Reactive_or_Estimate__c</columns>
    <columns>ShouldAutoCreateSvcAppt</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name</field>
        <operation>notContain</operation>
        <value>OSA-</value>
    </filters>
    <filters>
        <field>Name</field>
        <operation>notContain</operation>
        <value>Online</value>
    </filters>
    <label>Work Types (Ex. OSA &amp; OB)</label>
</ListView>