unpackaged/main/default/objects/WorkType/listViews/Work_Types_Leak_Detection_Plumbing.listView-meta.xml
<ListView>
    <fullName>Work_Types_Leak_Detection_Plumbing</fullName>
    <columns>Trade__c</columns>
    <columns>Group_Lookup__c</columns>
    <columns>Name</columns>
    <columns>Qualified_Resource_Count__c</columns>
    <columns>EstimatedDuration</columns>
    <columns>Reactive_or_Estimate__c</columns>
    <columns>ShouldAutoCreateSvcAppt</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trade__c</field>
        <operation>contains</operation>
        <value>Leak Detection,Plumbing &amp; Cold Water,Utilities - Project - Leak Detection</value>
    </filters>
    <label>Work Types - Leak Detection / Plumbing</label>
</ListView>